<resources>  <string name="app_name">登陆</string>
    <string name="forget_button">忘记密码</string>

    <string name="correct_toast">密码错误:D</string>
    <string name="incorrect_toast">哈哈哈哈你个zz</string>
    <string name="next_button">立即用手机号注册账号</string>
    <string name="one_edit">输入手机号</string>
    <string name="two_edit">输入密码</string>
    <string name="register_text">注册</string>
    <string name="three_edit">昵称</string>
    <string name="four_edit">密码</string>

</resources>
