<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">
<!--:orientation属性是两个LinearLayout组件都具有的属性，它决定两者的子组件 是水平放置还是垂直放置。
根LinearLayout是垂直的，子LinearLayout是水平的。 -->

    <EditText
        android:id="@+id/editText1"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:text="@string/one_edit"
        android:textColor="#a3a3a3"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:text="@string/two_edit"
        android:textColor="#a3a3a3"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/forget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_button"
            android:background="#ffffff"
            android:textColor="#2dae64"/>
        <Button
            android:id="@+id/loin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:background="#ffffff"
            android:textColor="#2dae64"/>


    </LinearLayout>


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:background="#ffffff"
        android:textColor="#2dae64"/>

</LinearLayout>

