<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="1"
    android:background="#b1fcf2">


    <TextView
        android:id="@+id/bigregister"
        android:gravity="center"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:layout_weight="0.07"
        android:textSize="30sp"
        android:textColor="#2dae64"/>
    <EditText
        android:id="@+id/yourname"
        android:textColor="#a3a3a3"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:text="@string/three_edit"/>

    <EditText
        android:id="@+id/password"
        android:textColor="#a3a3a3"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:text="@string/four_edit"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/register_text"

        android:background="#ffffff"
        android:textColor="#2dae64"
        />


</LinearLayout>
